--- a/EnlightenMe/app/src/main/res/layout/activity_dep_buttons.xml
+++ b/EnlightenMe/app/src/main/res/layout/activity_dep_buttons.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:backgroundTint="#DEABFF"
     tools:context=".Dep_Buttons">
 
     <Button
@@ -11,7 +12,9 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:layout_marginTop="24dp"
+        android:backgroundTint="#DEABFF"
         android:text="Overview"
+        android:textColor="#07010B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +25,9 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:layout_marginTop="40dp"
+        android:backgroundTint="#DEABFF"
         android:text="Symptoms"
+        android:textColor="#07010B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/depOV" />
@@ -32,7 +37,9 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:layout_marginTop="40dp"
+        android:backgroundTint="#DEABFF"
         android:text="Depression symptoms in children and teens"
+        android:textColor="#07010B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/depSym" />
@@ -42,7 +49,9 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:layout_marginTop="40dp"
+        android:backgroundTint="#DEABFF"
         android:text="Depression symptoms in older adults"
+        android:textColor="#07010B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/depKidTeen" />
@@ -52,7 +61,9 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:layout_marginTop="40dp"
+        android:backgroundTint="#DEABFF"
         android:text="When to see a doctor"
+        android:textColor="#07010B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/depAdult" />
@@ -62,7 +73,9 @@
         android:layout_width="270dp"
         android:layout_height="80dp"
         android:layout_marginTop="40dp"
+        android:backgroundTint="#DEABFF"
         android:text="When to get emergency help"
+        android:textColor="#07010B"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
